# ProcDataChpt

./: Data.csv  run_data_route.py
pixi-py/: .~lock.Championnat_FSGT71_2026.ods#  Championnat_FSGT71_2026.ods  pyproject.toml  route_ventilee.ods  route_ventilee.xlsx
pixi-py/src/pixi_py/: CLMInd.csv  DataFinales.csv  Ins_route.csv  ToOdsChhpt.py  run_data_route.py
